# platerflow.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_release.yml  main.yml
assets/output/: main.conf
platerbinary/: plater_cli_linux_x64
src/: config.rs  main.rs  moonraker.rs  processes.rs  thumbnails.rs
