[package]
name = "platerflow"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Fully automatic 3D Slicing with Plater and SuperSlicer"
homepage = "https://github.com/platerflow"
repository = "https://github.com/platerflow/platerflow.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 2

[dependencies]
subprocess = "0.2.9"
serde = "1.0"
serde_derive = "1.0.139"
toml = "0.5.9"
exitcode = "1.1.2"
glob = "0.3.0"
num_cpus = "1.13.1"
reqwest = { version = "0.11.12", features = ["blocking", "multipart"] }
stl2thumbnail = { version = "1.0.0", git = 'https://github.com/platerflow/stl2thumbnail_rs' }
base64 = "0.13.0"
regex = "1.6.0"
colored = "2"
clap = { version = "4.0.11", features = ["cargo"] }
openssl-sys = {version = "0.9.76", features = ["vendored"]}